test/conformance/chainsaw/namespaced-image-validating-policies/report/background/report.yaml
apiVersion: wgpolicyk8s.io/v1alpha2
kind: PolicyReport
metadata:
  labels:
    app.kubernetes.io/managed-by: kyverno
  ownerReferences:
  - apiVersion: apps/v1
    kind: Deployment
    name: test-deployment-nivpol-background
scope:
  apiVersion: apps/v1
  kind: Deployment
  name: test-deployment-nivpol-background
results:
- message: failed to verify image with notary cert
  policy: nivpol-report-background-sample
  result: fail
  scored: true
  source: KyvernoImageValidatingPolicy
summary:
  error: 0
  fail: 1
  pass: 0
  skip: 0
  warn: 0
