test/conformance/chainsaw/namespaced-image-validating-policies/_step-templates/namespaced-image-validating-policy-ready-background.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/steptemplate-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: StepTemplate
metadata:
  name: namespaced-image-validating-policy-ready-background
spec:
  try:
  - assert:
      template: true
      resource:
        apiVersion: policies.kyverno.io/v1beta1
        kind: NamespacedImageValidatingPolicy
        metadata:
          name: ($name)
          namespace: ($namespace)
        status:
          conditionStatus:
            (conditions[?type == 'RBACPermissionsGranted']):
            - message: Policy is ready for reporting.
              reason: Succeeded
              status: "True"
              type: RBACPermissionsGranted
            ready: true
